software-center (1.1.18) UNRELEASED; urgency=low

  [ Michael Vogt ]
  * data/templates/AppDetailsView.html:
    - cherry pick progress nice bar improvements from 
      Michael Forrest (many thanks)

  [ Gary Lasker ]
  * data/ui/SoftwareCenter.ui:
    - don't translate available pane notebook labels
      (LP: #539371)

 -- Gary Lasker <gary.lasker@canonical.com>  Tue, 16 Mar 2010 10:12:37 -0400

software-center (1.1.17) lucid; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/navhistory.py:
    - unescape the nav button label text (LP: #531689)
    - fix up and just use a single __str__ method (LP: #531780)
  * softwarecenter/view/availablepane.py,
    softwarecenter/view/channelpane.py:
    - fix intermittent AttributeError when a previous
      model does not exist when refreshing the apps view
      (LP: #531820)
  
  [ Michael Vogt ]
  * merged lp:~mpt/software-center/bug-499893 (thanks)
  * merged lp:~mpt/software-center/categorization (thanks)
  * merged lp:~michaelforrest/software-center/ui-changes (thanks)
  * data/icons/scalable/apps/partner.svg:
    - add partner icon (LP: #531694)
  * softwarecenter/view/catview.py:
    - do not show header in subsection view
  * softwarecenter/view/availablepane.py:
    - fix race in initial part creation (LP: #531798)
  * debian/control:
    - add gnome-app-install transitional package (closes: #572941)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 11 Mar 2010 16:58:00 +0100

software-center (1.1.16.1) lucid; urgency=low

  * softwarecenter/view/navhistory.py:
    - fix missing import

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 03 Mar 2010 22:56:11 +0100

software-center (1.1.16) lucid; urgency=low

  [ Matthew McGowan ]
  * softwarecenter/view/widget/backforward.py:
    - add new widget for use in back/forward navigation feature

  [ Michael Vogt ]
  * data/software-center.menu.in:
    - merge "System Tools" into "Accessories"
    - rename "System Packages" to "System"
    - add "Fonts" section